<resources>
    <string name="app_name">Utility Bill</string>
    <string name="card_title">Картка</string>
    <string name="card_number">0000 **** **** 0000</string>
    <string name="Month">Місяць</string>
    <string name="month_name">Лютий</string>
    <string name="edit_card_button">Edit card button</string>
    <string name="choose_title">Виберіть послуги для формування рахунку:</string>
    <string name="create_bill">Сформувати рахунок</string>
    <string name="service_tariff">Тариф: %.2f</string>
    <string name="previous">Попередні</string>
    <string name="zero">0</string>
    <string name="previous_service_value">Previous service value</string>
    <string name="current_title">Поточні</string>
    <string name="add_service">Додати послугу</string>
    <string name="service_name">Назва послуги:</string>
    <string name="tariff">Тариф:</string>
    <string name="previous_value">Попередні значення:</string>
    <string name="save">Зберегти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copy_bill">Copy bill</string>
    <string name="bill">Рахунок:</string>
    <string name="bill_title">Підрахував комуналку:\n</string>
    <string name="service_with_meter_int_tariff_value">%s: %d %s * %d грн = %d грн\n</string>
    <string name="service_with_meter_double_tariff_value">%s: %d %s * %.2f грн = %d грн\n</string>
    <string name="service_without_meter">%s = %.2f грн\n</string>
    <string name="service_total">Разом: %d грн\nКарта для сплати комуналки - %s</string>
    <string-array name="meter_unit_array">
        <item>куб.</item>
        <item>кВт</item>
    </string-array>
    <string name="try_again">Заповніть, будь-ласка поле</string>
    <string name="cubic_meters">куб.</string>
    <string name="edit_service_description">Редагування послуги</string>
    <string name="current_value_error">Поточне значення має бути більшим від попереднього або дорівнювати йому!</string>
    <string name="card_number_value_error">Поле має містити 12 символів!</string>
    <string name="delete_service">Видалити послугу</string>
    <string name="alert_title_delete_service">Видалити послугу?</string>
    <string name="alert_title_delete_bill">Видалити рахунок?</string>
    <string name="alert_message_delete_service">Всі данні про послугу будуть видалені.</string>
    <string name="alert_message_delete_bill">Ви дійсно бажаєте видалити рахунок?.</string>
    <string name="alert_message_cancel">Відхилити</string>
    <string name="alert_message_accept">Підтвердити</string>
    <string name="clipboard_text">Рахунок скопійовано до буфера обміну</string>
    <string name="add_service_title">Додати нову послугу</string>
    <string name="edit_service_title">Змінити деталі послуги</string>
    <string name="bill_month_title">Рахунок за %s</string>
    <string name="result_title">Рахунок</string>
    <string name="default_card_number">0000 0000 0000 0000</string>
    <string name="default_month">Місяць відсутній</string>
    <string name="presence_of_meter">Наявність лічильника</string>
    <string name="delete_bill">Видалити рахунок?</string>
    <string name="archive_bills">Архів рахунків</string>
    <string name="save_bill">Зберегти рахунок</string>
    <string name="bill_detail">Деталі рахунку</string>
    <string name="previous_value_title">Попередні показники:</string>
    <string name="current_value_title">Поточні показники:</string>
    <string name="tariff_title">Тариф:</string>
    <string name="service_name_title">Назва послуги:</string>
    <string name="consumed_title">Спожито:</string>
    <string name="tariff_value">%.2f грн</string>
    <string name="sum_title">Сума:</string>
    <string name="sum_value">%.2f грн</string>
    <string name="current_value_detail">%d %s</string>
    <string name="previous_value_detail">%d %s</string>
    <string name="consumed_value">%d %s</string>
    <string name="values_error">В послузі %s поточні значення лічилькника меньші за попередні!</string>
    <string name="bill_detail_total">Разом: %d</string>
</resources>