<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:strokeColor="@android:color/background_light"
    tools:context=".model.fragments.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageViewCopy"
            app:layout_constraintBottom_toBottomOf="@id/imageViewCopy"  />

        <ImageView
            android:id="@+id/imageViewCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_copy"
            android:contentDescription="@string/copy_bill"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textViewBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:lineSpacingMultiplier="1.15"
            tools:text="Lorem ipsum dolor sit amet, no cibo wisi appellantur vis, oblique probatus expetendis eam ne, nec ei omnesque molestie scripserit. Essent gubergren in pri. Ne ius liber nullam audiam, illud deterruisset delicatissimi cu cum."
            app:layout_constraintTop_toBottomOf="@id/imageViewCopy"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
        android:id="@+id/buttonSaveBill"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_bold"
        android:letterSpacing="0.01"
        android:text="@string/save_bill"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textViewBill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/buttonBillDetail"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato_bold"
            android:letterSpacing="0.01"
            android:text="@string/bill_detail"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/textViewBill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>